--- a/src/components/ui/ingredient-details/ingredient-details.module.css
+++ b/src/components/ui/ingredient-details/ingredient-details.module.css
@@ -1,19 +1,20 @@
 .content {
-  margin: 0 60px;
+  margin: 0 auto;
+  max-width: 640px;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
-  width: 520px;
+  padding-top: 40px;
 }
 
 .nutritional_values {
   display: flex;
-  justify-content: space-between;
-  width: 100%;
+  justify-content: center;
+  gap: 40px;
   list-style-type: none;
   padding: 0;
-  margin: 0;
+  margin: 32px 0 0 0;
   color: #8585ad;
 }
 
